--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,16 @@ a:focus, a:hover {
   text-align: center;
   position: absolute;
 }
+@media (max-width: 768px) {
+  .preloader {
+    left: 45%;
+  }
+}
+@media (max-width: 480px) {
+  .preloader {
+    left: 42%;
+  }
+}
 
 .preloader span {
   position: absolute;
@@ -641,17 +651,6 @@ a:focus, a:hover {
   justify-content: center;
   text-align: center;
 }
-.slider-item .bg-video {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  z-index: -1;
-}
 .slider-item .overlay {
   position: absolute;
   top: 0;
@@ -811,6 +810,16 @@ a:focus, a:hover {
   overflow: hidden;
   position: relative;
   background: black;
+}
+.video-section .bg-video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .text-section {
