--- a/css/style.css
+++ b/css/style.css
@@ -858,10 +858,15 @@ a:focus, a:hover {
 }
 .about-2 .checklist li {
   position: relative;
-  margin-bottom: 15px;
+  margin-bottom: 35px;
   font-size: 16px;
   color: #777;
   font-family: "Source Sans Pro", sans-serif;
+}
+@media (max-width: 992px) {
+  .about-2 .checklist li {
+    margin-bottom: 15px;
+  }
 }
 .about-2 .checklist li:before {
   position: absolute;
@@ -880,6 +885,10 @@ a:focus, a:hover {
 }
 .about-shot-info .container {
   padding-top: 80px;
+}
+
+code {
+  color: #848484;
 }
 
 /*=================================================================
@@ -1084,10 +1093,13 @@ a:focus, a:hover {
   padding: 40px 55px 65px;
   background: #ffffff;
   margin-bottom: 30px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 .pricing-table .pricing-item a.btn-main {
   text-transform: uppercase;
-  margin-top: 20px;
+  margin-top: auto;
 }
 .pricing-table .pricing-item li {
   font-weight: 400;
@@ -1105,6 +1117,11 @@ a:focus, a:hover {
   margin: 0 0 5px;
   font-size: 20px;
   text-transform: uppercase;
+  height: 100px;
+}
+.pricing-table .price-title > small {
+  display: block;
+  height: 30px;
 }
 .pricing-table .price-title > p {
   font-size: 16px;
